Move build logic into package.json

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install and Build
         run: |
           npm install
-          npx spago bundle-module -x --main Interpreter
+          npm start
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
